Beginning the implementation of a REST API